Prevent horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,8 @@
   padding: 0px;
   box-sizing: border-box;
 }
-
-html,
-body {
-  overflow-x: hidden;
+html {
+  overflow: hidden scroll;
 }
 
 .autocomplete-selected {
